# sysd-builder

./: README.md  pyproject.toml  templates
sysd_builder/: builder.py  cli.py
sysd_builder/templates/: service.j2  timer.j2
