[tool.poetry]
name = "sysd-builder"
version = "0.1.0"
description = ""
authors = ["Ken Levasseur <klevasseuriv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.0.3"
click = "^8.0.3"
plumbum = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"

[tool.poetry.scripts]
sdb = 'sysd_builder.cli:sdb_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
